fixed bug on mobile with default width

--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,6 @@ body,
   width: 100%;
   font-family: "Rubik", sans-serif;
   scroll-behavior: smooth;
+  position: absolute;
+
 }
